Fixed horizontal scroll error

--- a/src/globalStyles/globals.scss
+++ b/src/globalStyles/globals.scss
@@ -1,7 +1,3 @@
-// :root {
-//   // --max-width: 1100px;
-//   // --border-radius: 12px;
-// }
 * {
   box-sizing: border-box;
   padding: 0;
@@ -9,7 +5,7 @@
 }
 html,
 body {
-  max-width: 100vw;
+  width: 100%;
   height: 100%;
 }
 body {
