--- a/src/modules/contact-us-section/contact-us.scss
+++ b/src/modules/contact-us-section/contact-us.scss
@@ -8,8 +8,9 @@
   align-items: center;
   @include breakpoint(small) {
     flex-direction: column;
-    padding: 60px 80px;
+    padding: 60px 20px;
     gap: 40px;
+    overflow: hidden;
   }
 }
 .contact-us__heading {
