--- a/src/modules/footer/footer.scss
+++ b/src/modules/footer/footer.scss
@@ -9,6 +9,7 @@
     gap: 10px;
     padding: 25px 0px 25px 30px;
     align-items: flex-start;
+    overflow: hidden;
   }
 }
 .footer__title {
