--- a/src/modules/location-section/location.scss
+++ b/src/modules/location-section/location.scss
@@ -48,9 +48,8 @@
     }
   }
 }
-
 .map {
-  width: 100%;
+  max-width: 100%;
   height: 100%;
   z-index: 1;
   @include breakpoint(small) {
